syntax = "proto3";

package org.ga4gh.vrs;

option java_multiple_files = true;
option java_package = "org.ga4gh.vrs";

// Sequence:
//    additionalProperties: false
//    description: >-
//      A character string of residues that represents a biological
//      sequence using the conventional sequence order (5’-to-3’ for
//      nucleic acid sequences, and amino-to-carboxyl for amino acid
//      sequences). IUPAC ambiguity codes are permitted in Sequences.
//    type: string
//    pattern: '^[A-Z*\-]*$'

// CURIE:
//    additionalProperties: false
//    description: >-
//      A string that refers to an object uniquely.  The lifetime and
//      scope of an id is defined by the sender.
//
//      VRS does not impose any contraints on strings used as ids in
//      messages. However, to maximize sharability of data, VRS
//      RECOMMENDS that implementations use [W3C Compact URI
//      (CURIE)](https://www.w3.org/TR/curie/) syntax.
//
//      String CURIEs are represented as `prefix`:`reference` (W3C
//      terminology), but often referred to as `namespace`:`accession`
//      or `namespace`:`local id` colloquially.
//
//      VRS also RECOMMENDS that `prefix` be defined in identifiers.org.
//
//      The `reference` component is an unconstrained string.
//
//      A CURIE is a URI.  URIs may *locate* objects (i.e., specify
//      where to retrieve them) or *name* objects conceptually.  VRS uses
//      CURIEs primarily as a naming mechanism.
//
//      Implementations MAY provide CURIE resolution mechanisms for
//      prefixes to make these objects locatable.
//
//      Using internal ids in public messages is strongly discouraged.
//
//    type: string
//    pattern: '^\w[^:]*:.+$'
//    example: "ensembl:ENSG00000139618"

// HumanCytoband:
//    description: >-
//      A interval on a stained metaphase chromosome specified by cytobands.
//      CytobandIntervals include the regions described by the start and end
//      cytobands.
//    type: string
//    pattern: '^cen|[pq](ter|([1-9][0-9]*(\.[1-9][0-9]*)?))$'
//    example: "q22.3"



// note that the types cannot be defined here due to protobuf
//enum Types {
//    Text = 0;
//    Allele = 1;
//    SequenceLocation = 3;
//    SimpleInterval = 4;
//    SequenceState = 5;
//}

// Variation types; commented out as inheritance is not supported by protobuf

// The root class of all Variation types
//message Variation {
//    oneof variation {
//        MolecularVariation molecular = 1;
//        SystemicVariation systemic = 2;
//        UtilityVariation utility = 3;
//    }
//}

// A variation on a contiguous molecule.
message MolecularVariation {
    oneof molecular_variation {
        Allele allele = 1;
        Haplotype haplotype = 2;
    }
}

// A Variation of multiple molecules in the context of a system, e.g.
// a genome, sample, or homologous chromosomes.
//message SystemicVariation {
//    oneof systemic_variation {
//        Abundance abundance = 1;
//    }
//}

// Utility variation classes that cannot be constrained to a specific
// biological class of variation.
//message UtilityVariation {
//    oneof utility_variation {
//        Text text = 1;
//    }
//}

// ---------------------------------------------------------------------
// MolecularVariation
//   A variation on a contiguous molecule.
message Allele {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'Allele'
    string type = 2;
    Location location = 4;
    SequenceExpression state = 5;
}

// A set of zero or more Alleles
message Haplotype {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'Haplotype'
    string type = 2;
    // n.b. this is NOT the full spec due to JSON schema and protobuf mismatches.
    repeated Allele members = 3;
}

// ---------------------------------------------------------------------
// UtilityVariation
//   Utility variation classes that cannot be constrained to a specific
//   biological class of variation.

// An textual representation of variation intended to capture
// variation descriptions that cannot be parsed, but still
// treated as variation.
message Text {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'Text'
    string type = 2;
    string definition = 3;
}

// ---------------------------------------------------------------------
// SystemicVariation

// The quantity of a feature, variation, molecule or part thereof in a system.
// Inheritance not supported by protobuf
//message Abundance {
//    oneof abundance {
//        CopyNumber copy_number = 1;
//    }
//}

// The count of copies of a Feature, Location, or Molecular Variation subject within a genome.
message CopyNumber {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'CopyNumber'
    string type = 2;
    oneof subject {
        MolecularVariation molecular_variation = 3;
        Feature feature = 4;
        Location location = 5;
        string curie = 6;
    }
    AbsoluteCopyCount copies = 7;
}

// ---------------------------------------------------------------------
// Location

// A Location represents a span on a specific sequence.
message Location {
    oneof location {
        ChromosomeLocation chromosome_location = 1;
        SequenceLocation sequence_location = 2;
    }
}

// A region of a chromosome specified by species and name using cytogenetic naming conventions
message ChromosomeLocation {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'ChromosomeLocation'
    string type = 2;
    string species_id = 3;
    string chr = 4; // eww! This should be chromosome_name, also need GenBank accession GCA...
    CytobandInterval interval = 5;
}

// A specified subsequence within another sequence that is used as a reference sequence.
message SequenceLocation {
    // The computed CURIE for this object
    string _id = 1;
    // MUST be the value 'SequenceLocation'
    string type = 2;
    // A CURIE identifier for the sequence
    string sequence_id = 3;
    SequenceInterval interval = 4;
}


// ---------------------------------------------------------------------
// SequenceIntervals

message SequenceInterval {
    oneof sequence_interval {
        SimpleInterval simple_interval = 1;
        NestedInterval nested_interval = 2;
    }
}

// A SimpleInterval represents a span of sequence. Positions are
// always represented by contiguous spans using interbase
// coordinates.
//
// This definition of SequenceInterval is intended to be compatible with that
// in Sequence Ontology
// ([SO:0000001](http://www.sequenceontology.org/browser/current_svn/term/SO:0000001)),
// with the exception that the GA4GH VRS SequenceInterval may be
// zero-width. The SO definition is for an "extent greater than zero".
message SimpleInterval {
    // MUST be the value 'SimpleInterval'
    string type = 1;
    uint64 start = 2;
    uint64 end = 3;
}

message NestedInterval {
    // MUST be the value 'NestedInterval'
    string type = 1;
    SimpleInterval inner = 2;
    // q22.2
    SimpleInterval outer = 3;
}

// A contiguous region specified by chromosomal bands features.
message CytobandInterval {
    // MUST be the value 'CytobandInterval'
    string type = 1;
    // A string matching the pattern '^cen|[pq](ter|([1-9][0-9]*(\.[1-9][0-9]*)?))$' example: q22.2
    string start = 2;
    // A string matching the pattern '^cen|[pq](ter|([1-9][0-9]*(\.[1-9][0-9]*)?))$' example: q22.3
    string end = 3;
}

// ---------------------------------------------------------------------
// SequenceExpression

// One of a set of sequence representation syntaxes.
message SequenceExpression {
    oneof sequence_expression {
        LiteralSequenceExpression literal = 1;
        DerivedSequenceExpression derived = 2;
        RepeatedSequenceExpression repeated = 3;
    }
}

message LiteralSequenceExpression {
    // MUST be the value 'LiteralSequenceExpression'
    string type = 1;
    string sequence = 2;
}

message DerivedSequenceExpression {
    // MUST be the value 'DerivedSequenceExpression'
    string type = 1;
    SequenceLocation location = 2;
    // TODO: what does this mean?
    bool transformation = 3;
}

message RepeatedSequenceExpression {
    // MUST be the value 'RepeatedSequenceExpression'
    string type = 1;
    // TODO: circular reference alert!
    SequenceExpression seq_expr = 2;
    AbsoluteCopyCount count = 3;
}


// ---------------------------------------------------------------------
// Feature

// A named entity that can be mapped to a Location. Genes, protein domains,
// exons, and chromosomes are some examples of common biological entities
// that may be Features.
message Feature {
    oneof feature {
        Gene gene = 1;
    }
}

// A reference to an external gene system, used as a location for
// variation.  Currently, the `ncbigene` namespace is required. See
// https://registry.identifiers.org/registry/ncbigene.
message Gene {
    // MUST be the value 'Gene'
    string type = 1;
    string gene_id = 2;
}


// ---------------------------------------------------------------------
// Quantity

message Quantity {
    oneof quantity {
        AbsoluteCopyCount absolute_copy_count = 1;
    }
}

// An integer count of copies. Counts are bounded ranges denoted by minimum
// and maximum possible values. Absolute copy number counts may not be smaller
// than zero.
message AbsoluteCopyCount {
    // MUST be the value 'AbsoluteCopyCount'
    string type = 1;
    uint32 min = 2;
    uint32 max = 3;
}


// State types

message VariationDescriptor {
    string type = 1;
    MoleculeContext molecule_context = 2;
    string structural_type = 3;
    repeated Expression expressions = 4;

    // We RECOMMEND that the allelic_state of variant be described by terms from the Genotype Ontology (GENO). These SHOULD descend from concept GENO:0000875.
    string allelic_state = 5;

//    Allele allele = ;

}

enum MoleculeContext {
    genomic = 0;
    transcript = 1;
    protein = 2;
}

message Expression {
 string type = 1;
 // e.g "hgvs:protein", 'ISCN', 'SPDI'
 string system = 2;
 // e.g. "NP_005219.2:p.Leu858Arg"
 string value = 3;
 string version = 4;
}